vlib/v/checker/tests/return_aliases_of_fixed_array.vv
type Mat = [2][2]int

fn main() {
	a := Mat([[1, 2]!, [3, 4]!]!)
	println(a.foo())
}

fn (v Mat) foo() Mat {
	return v
}

fn bar() Mat {
	return Mat([[1, 2]!, [3, 4]!]!)
}
